[tool.poetry]
name = "analisis_visualizacion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupytext = "^1.13.7"
jupyterthemes = "^0.20.0"
leaflet = "^0.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
